2007-08-03  Sam Weinig  <sam@webkit.org>

        Reviewed by Darin.

        Dump contents of subframes using new layoutTestController.dumpChildFramesAsText()
        function.

        * http/tests/security/cross-frame-access-port-expected.txt:
        * http/tests/security/cross-frame-access-port-explicit-domain-expected.txt:
        * http/tests/security/cross-frame-access-protocol-expected.txt:
        * http/tests/security/cross-frame-access-protocol-explicit-domain-expected.txt:
        * http/tests/security/resources/cross-frame-access.js:

2007-08-03  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Adele.

        - test for http://bugs.webkit.org/show_bug.cgi?id=14879
          REGRESSION: First item in select (pop-up menu) is displayed even if another item was selected via JavaScript

        * fast/forms/menulist-deselect-update-expected.checksum: Added.
        * fast/forms/menulist-deselect-update-expected.png: Added.
        * fast/forms/menulist-deselect-update-expected.txt: Added.
        * fast/forms/menulist-deselect-update.html: Added.

2007-08-03  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=14653
          REGRESSION (r23994): No caret is drawn after clicking a search field's placeholder text
          <rdar://problem/5383841>

        * fast/forms/search-click-in-placeholder-expected.txt: Added.
        * fast/forms/search-click-in-placeholder.html: Added.

2007-08-03  Adam Roben  <aroben@apple.com>

        Updated Skipped files for Windows and Leopard.

        * mac/leopard/Skipped: Removed a test that has been moved (and only
        fails on Windows), and added new failures.
        * win/Skipped: Added new failures and annotated some old ones.

2007-08-02  Adam Roben  <aroben@apple.com>

        Fix a typo in fast/events/no-blur-on-page

        Reviewed by Sam.

        * fast/events/no-blur-on-page-leave-expected.txt: Updated.