@@ -1,0 +1,7 @@
+
+
+--------
+Frame: '<!--framePath //<!--frame0-->-->'
+--------
+PASS: You should see this message in the browser.
+
