@@ -1,0 +1,7 @@
+<script>
+    if (window.layoutTestController) {
+        layoutTestController.dumpAsText();
+        layoutTestController.dumpChildFramesAsText();
+    }
+</script>
+<iframe src="plain-text-document.txt">
